--- a/src/profile/profile.css
+++ b/src/profile/profile.css
@@ -76,7 +76,7 @@
     justify-content: center;
     align-items: center;
     gap: 1rem;
-    margin-top: 90px;
+    /* margin-top: 90px; */
     border: 2px solid red;
 
 }
