--- a/src/Header/header.css
+++ b/src/Header/header.css
@@ -1,8 +1,8 @@
 .head-section{
 background-color: #070F2B;
-position:fixed;
+/* position:fixed;
 z-index: 100;
-width: 100%;
+width: 100%; */
 
 }
 .head-wrapper{
